config.ini changes

--- a/config.ini
+++ b/config.ini
@@ -12,11 +12,11 @@ Channel: Development
 Server: EN
 
 [Combat]
-Enabled: False
-Map: 3-4
+Enabled: True
+Map: 8-4
 KillsBeforeBoss: 0
-BossFleet: False
-OilLimit: 1000
+BossFleet: True
+OilLimit: 8000
 RetireCycle: 2
 RetreatAfter: 0
 IgnoreMysteryNodes: False
@@ -31,7 +31,7 @@ SearchMode: 1
 
 [Headquarters]
 Dorm: False
-Academy: False
+Academy: True
 SkillBookTier: 2
 
 [Modules]
